[gd_scene load_steps=5 format=3 uid="uid://bhovsmqs6bryn"]

[ext_resource type="Script" uid="uid://ctl7cptaadje" path="res://ui/fight_hud.gd" id="1_7u7oa"]
[ext_resource type="Script" uid="uid://pty0qg7e5hs4" path="res://ui/versus_stats.gd" id="1_xpkdk"]
[ext_resource type="Theme" uid="uid://bc7ta7mukaaxi" path="res://themes/main.tres" id="2_1egky"]
[ext_resource type="Script" uid="uid://djeqxr133lvjc" path="res://ui/countdown_overlay.gd" id="2_7u7oa"]

[node name="FightHud" type="CanvasLayer"]
script = ExtResource("1_7u7oa")

[node name="StatsLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VersusStats" type="Control" parent="StatsLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xpkdk")

[node name="OverlayLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1egky")

[node name="CountdownOverlay" type="Control" parent="OverlayLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7u7oa")

[node name="Label" type="Label" parent="OverlayLayer/CountdownOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 92
horizontal_alignment = 1

[node name="WinnerBanner" type="Control" parent="OverlayLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OverlayLayer/WinnerBanner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 92
horizontal_alignment = 1
